--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,11 @@
+@import url(https://db.onlinewebfonts.com/c/961a181da27e7cbc072ec2fb5bbfe2a9?family=Circular+Std+Bold);
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: "Circular Std Bold",'Arial', sans-serif;
 }
 
 header {
-    background-color: rgb(16, 190, 196);
-    color: white;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     text-align: end;
 }
 
@@ -18,31 +19,43 @@ nav ul li {
 }
 
 .intro {
-    background-color: #eee;
     padding: 20px;
-    text-align: center;
+    text-align: left;
+    max-width: 700px;
+    overflow: auto; 
 }
 
 .intro h1 {
     color: #333;
+    font-size: 30px;
 }
 
 .intro p {
     color: #666;
+    text-justify: auto;
 }
-
+#Mundial{
+    color: rgb(0, 186, 158);
+    font-size: 30px;
+}
 button {
-    background-color: #008CBA;
+    background-color: rgb(0, 186, 158);
     color: white;
+    font-weight: bold;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
+    border-radius: 40px;
+    box-shadow: 0px 20px 20px rgba(13, 157, 157, 0.2); /* Valor de transparencia ajustado */
     cursor: pointer;
 }
-
+#b2{
+    background-color: white;
+    color: rgb(0, 186, 158);
+}
 footer {
     text-align: center;
     padding: 20px;
