--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,7 @@
 body {
     font-family: "Circular Std Black";
     margin: 0;
+background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.dev/svgjs' width='1920' height='1080' preserveAspectRatio='none' viewBox='0 0 1920 1080'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1152%26quot%3b)' fill='none'%3e%3crect width='1920' height='1080' x='0' y='0' fill='rgba(255%2c 255%2c 255%2c 1)'%3e%3c/rect%3e%3cpath d='M374.537%2c1276.324C440.061%2c1278.469%2c502.749%2c1241.847%2c532.913%2c1183.64C561.103%2c1129.242%2c540.189%2c1067.293%2c510.689%2c1013.595C479.669%2c957.13%2c438.962%2c895.32%2c374.537%2c895.355C310.146%2c895.39%2c267.79%2c956.327%2c238.64%2c1013.742C212.733%2c1064.769%2c206.852%2c1123.005%2c233.155%2c1173.829C261.831%2c1229.236%2c312.182%2c1274.283%2c374.537%2c1276.324' fill='rgba(96%2c 225%2c 203%2c 0.2)' class='triangle-float3'%3e%3c/path%3e%3cpath d='M1442.039%2c482.511C1501.902%2c482.64%2c1558.114%2c452.814%2c1588.598%2c401.294C1619.651%2c348.814%2c1623.336%2c282.378%2c1591.078%2c230.63C1560.39%2c181.4%2c1500.005%2c168.488%2c1442.039%2c166.182C1378.229%2c163.643%2c1304.603%2c163.627%2c1270.937%2c217.892C1236.176%2c273.923%2c1260.765%2c345.295%2c1296.568%2c400.666C1328.947%2c450.743%2c1382.406%2c482.383%2c1442.039%2c482.511' fill='rgba(96%2c 225%2c 203%2c 0.2)' class='triangle-float3'%3e%3c/path%3e%3cpath d='M1100.3802675928232 318.3922095839126L1272.2676817467386 490.279623737828 1272.2676817467386 146.50479542999707z' fill='rgba(96%2c 225%2c 203%2c 0.2)' class='triangle-float2'%3e%3c/path%3e%3cpath d='M960.455%2c244.336C1004.89%2c242.863%2c1048.111%2c228.947%2c1073.595%2c192.516C1103.639%2c149.566%2c1123.771%2c93.426%2c1097.911%2c47.835C1071.829%2c1.852%2c1013.319%2c-6.639%2c960.455%2c-6.95C906.86%2c-7.265%2c848.142%2c0.484%2c820.168%2c46.2C791.292%2c93.39%2c801.559%2c155.324%2c833.528%2c200.476C861.252%2c239.633%2c912.503%2c245.926%2c960.455%2c244.336' fill='rgba(96%2c 225%2c 203%2c 0.2)' class='triangle-float3'%3e%3c/path%3e%3cpath d='M404.245%2c672.333C518.654%2c670.663%2c603.361%2c574.903%2c654.599%2c472.596C700.145%2c381.654%2c696.36%2c276.833%2c646.805%2c188.012C595.824%2c96.636%2c508.878%2c24.722%2c404.245%2c23.868C298.327%2c23.003%2c207.679%2c92.259%2c154.727%2c183.995C101.786%2c275.713%2c92.72%2c385.789%2c140.905%2c480.093C193.905%2c583.821%2c287.773%2c674.033%2c404.245%2c672.333' fill='rgba(96%2c 225%2c 203%2c 0.2)' class='triangle-float3'%3e%3c/path%3e%3cpath d='M1182.8400482799484 716.4111359231276L1327.0708778454753 999.4800772461533 1465.908989602974 572.1803063576008z' fill='rgba(96%2c 225%2c 203%2c 0.2)' class='triangle-float1'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1152'%3e%3crect width='1920' height='1080' fill='white'%3e%3c/rect%3e%3c/mask%3e%3cstyle%3e %40keyframes float1 %7b 0%25%7btransform: translate(0%2c 0)%7d 50%25%7btransform: translate(-10px%2c 0)%7d 100%25%7btransform: translate(0%2c 0)%7d %7d .triangle-float1 %7b animation: float1 5s infinite%3b %7d %40keyframes float2 %7b 0%25%7btransform: translate(0%2c 0)%7d 50%25%7btransform: translate(-5px%2c -5px)%7d 100%25%7btransform: translate(0%2c 0)%7d %7d .triangle-float2 %7b animation: float2 4s infinite%3b %7d %40keyframes float3 %7b 0%25%7btransform: translate(0%2c 0)%7d 50%25%7btransform: translate(0%2c -10px)%7d 100%25%7btransform: translate(0%2c 0)%7d %7d .triangle-float3 %7b animation: float3 6s infinite%3b %7d %3c/style%3e%3c/defs%3e%3c/svg%3e");
 }
 
 a:link, a:visited, a:active {
@@ -14,11 +15,18 @@ a:link, a:visited, a:active {
 }
 
 header {
-    background-color: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     text-align: end;
-    margin-top: 40px;
+    background: white;
+    padding: 5px;
+    font-size: 20px;
+    z-index: 1000;
     margin-right: 250px;
 }
+
 
 nav ul {
     list-style: none;
@@ -26,7 +34,7 @@ nav ul {
 
 nav ul li {
     display: inline;
-    margin-right: 20px;
+    margin-right: 60px;
 }
 
 .intro {
@@ -88,29 +96,4 @@ footer {
     background-color: #60e1cb;
     color: white;
     margin-top: 20px;
-}
-
-.linea-circular {
-    width: 701.57px;
-    height: 701.57px;
-    border: 5px solid rgba(96, 225, 203, 0.2); /* Color con transparencia del 20% */
-    border-radius: 50%;
-    clip-path: polygon(0% 0%, 100% 0%, 100% 30%, 50% 50%, 50% 100%, 0% 100%);
-    position: absolute;
-    bottom: -430px;
-    left: -140px;
-    z-index: -1; /* Ajusta este valor para que la línea esté detrás o delante del texto */
-
-}
-
-.circulo-pequeno {
-    width: 601.57px;
-    height: 601.57px;
-    border: 5px solid rgba(96, 225, 203, 0.2); /* Color con transparencia del 20% */
-    border-radius: 50%;
-    clip-path: polygon(0% 0%, 100% 0%, 100% 30%, 50% 50%, 50% 100%, 0% 100%);
-    position: absolute;
-    bottom: -430px;
-    left: -140px;
-    z-index: -1; /* Ajusta este valor para que la línea esté detrás o delante del texto */
 }
