--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,6 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.dev/svgjs' width='1920' height='1080' preserveAspectRatio='none' viewBox='0 0 1920 1080'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1177%26quot%3b)' fill='none'%3e%3crect width='1920' height='1080' x='0' y='0' fill='rgba(255%2c 255%2c 255%2c 1)'%3e%3c/rect%3e%3cpath d='M2005.034%2c1410.134C2100.152%2c1408.746%2c2184.897%2c1358.661%2c2236.701%2c1278.876C2294.269%2c1190.213%2c2332.634%2c1078.048%2c2280.284%2c986.207C2227.591%2c893.764%2c2111.291%2c866.82%2c2005.034%2c872.444C1909.185%2c877.517%2c1824.757%2c930.212%2c1776.014%2c1012.897C1726.428%2c1097.012%2c1712.584%2c1201.22%2c1761.354%2c1285.811C1810.169%2c1370.481%2c1907.31%2c1411.56%2c2005.034%2c1410.134' fill='rgba(96%2c 225%2c 203%2c 0.2)' class='triangle-float1'%3e%3c/path%3e%3cpath d='M1405.856%2c1151.114C1496.616%2c1144.969%2c1558.397%2c1066.472%2c1598.809%2c984.973C1634.158%2c913.683%2c1636.092%2c832.474%2c1598.677%2c762.246C1558.703%2c687.215%2c1490.871%2c622.908%2c1405.856%2c622.8C1320.697%2c622.692%2c1257.234%2c689.487%2c1212.185%2c761.755C1163.459%2c839.921%2c1120.619%2c932.1%2c1161.641%2c1014.57C1206.16%2c1104.07%2c1306.123%2c1157.866%2c1405.856%2c1151.114' fill='rgba(96%2c 225%2c 203%2c 0.2)' class='triangle-float1'%3e%3c/path%3e%3cpath d='M1755.422%2c782.023C1840.302%2c783.524%2c1920.153%2c732.654%2c1956.969%2c656.16C1990.029%2c587.471%2c1957.956%2c510.796%2c1916.865%2c446.588C1879.739%2c388.577%2c1824.146%2c345.779%2c1755.422%2c341.229C1677.392%2c336.063%2c1593.146%2c355.843%2c1552.158%2c422.442C1509.611%2c491.574%2c1525.911%2c578.575%2c1565.858%2c649.242C1606.548%2c721.223%2c1672.749%2c780.561%2c1755.422%2c782.023' fill='rgba(96%2c 225%2c 203%2c 0.2)' class='triangle-float3'%3e%3c/path%3e%3cpath d='M26.462%2c707.463C74.714%2c710.5%2c126.178%2c698.277%2c152.25%2c657.562C180.09%2c614.087%2c177.782%2c557.168%2c150.943%2c513.068C125.097%2c470.6%2c76.177%2c451.035%2c26.462%2c450.874C-23.575%2c450.712%2c-76.158%2c467.958%2c-99.425%2c512.257C-121.579%2c554.437%2c-100.417%2c603.243%2c-74.596%2c643.283C-51.416%2c679.227%2c-16.224%2c704.776%2c26.462%2c707.463' fill='rgba(96%2c 225%2c 203%2c 0.2)' class='triangle-float1'%3e%3c/path%3e%3cpath d='M942.93%2c1103.962C982.762%2c1104.392%2c1028.142%2c1108.696%2c1050.855%2c1075.972C1075.858%2c1039.949%2c1072.192%2c989.527%2c1047.516%2c953.279C1025.288%2c920.628%2c982.429%2c917.363%2c942.93%2c917.434C903.607%2c917.505%2c860.777%2c920.916%2c838.994%2c953.654C815.239%2c989.356%2c814.578%2c1038.412%2c838.968%2c1073.684C860.97%2c1105.503%2c904.247%2c1103.544%2c942.93%2c1103.962' fill='rgba(96%2c 225%2c 203%2c 0.2)' class='triangle-float1'%3e%3c/path%3e%3cpath d='M741.858%2c933.834C842.092%2c929.826%2c930.634%2c873.82%2c981.354%2c787.273C1032.695%2c699.667%2c1047.664%2c589.635%2c994.145%2c503.342C942.887%2c420.694%2c839.046%2c397.564%2c741.858%2c401.111C651.745%2c404.399%2c570.091%2c445.97%2c519.567%2c520.66C461.114%2c607.072%2c417.29%2c715.978%2c466.719%2c807.851C517.941%2c903.059%2c633.832%2c938.153%2c741.858%2c933.834' fill='rgba(96%2c 225%2c 203%2c 0.2)' class='triangle-float2'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1177'%3e%3crect width='1920' height='1080' fill='white'%3e%3c/rect%3e%3c/mask%3e%3cstyle%3e %40keyframes float1 %7b 0%25%7btransform: translate(0%2c 0)%7d 50%25%7btransform: translate(-10px%2c 0)%7d 100%25%7btransform: translate(0%2c 0)%7d %7d .triangle-float1 %7b animation: float1 5s infinite%3b %7d %40keyframes float2 %7b 0%25%7btransform: translate(0%2c 0)%7d 50%25%7btransform: translate(-5px%2c -5px)%7d 100%25%7btransform: translate(0%2c 0)%7d %7d .triangle-float2 %7b animation: float2 4s infinite%3b %7d %40keyframes float3 %7b 0%25%7btransform: translate(0%2c 0)%7d 50%25%7btransform: translate(0%2c -10px)%7d 100%25%7btransform: translate(0%2c 0)%7d %7d .triangle-float3 %7b animation: float3 6s infinite%3b %7d %3c/style%3e%3c/defs%3e%3c/svg%3e");
     background-size: cover;
 }
@@ -35,7 +34,7 @@ header {
     padding: 2px;
     font-size: 20px;
     box-shadow: 0 2px 2px rgba(22, 22, 22, 0.2);
-
+    z-index:2
 }
 
 
@@ -47,13 +46,14 @@ nav ul li {
 .intro {
     display: flex;
     flex-direction: row;
-    justify-content: space-around; 
+    justify-content: space-around;
     align-items: center;
-    overflow: hidden; 
+    overflow: hidden;
 }
 
 
-.content, .intro div:nth-child(2) {
+.content,
+.intro div:nth-child(2) {
     flex: 1;
     max-width: 50%;
     margin-bottom: 30px;
@@ -61,10 +61,11 @@ nav ul li {
 }
 
 
-.content{
+.content {
     max-width: 40em;
     margin-left: 10em;
 }
+
 .content h1 {
     color: #333;
     font-weight: bold;
@@ -94,16 +95,16 @@ nav ul li {
     border-radius: 40px;
     cursor: pointer;
     border: none;
-    transition: transform 0.3s, box-shadow 0.3s; 
+    transition: transform 0.3s, box-shadow 0.3s;
 }
 
 #start:hover {
-    box-shadow: 0 15px 15px rgba(96, 225, 203, 0.3); 
-    transform: translateY(5px); 
+    box-shadow: 0 15px 15px rgba(96, 225, 203, 0.3);
+    transform: translateY(5px);
 }
 
 #start:active {
-    box-shadow: 0 5px 5px rgba(96, 225, 203, 0.2); 
+    box-shadow: 0 5px 5px rgba(96, 225, 203, 0.2);
     transform: translateY(10px);
 }
 
@@ -119,22 +120,24 @@ footer {
 
 #imagesimple {
     max-width: 80%;
-    height: auto; 
+    height: auto;
     width: auto;
 }
-.image{
+
+.image {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.map-container{
+.map-container {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.map{
-    
+
+.map {
+
     margin-top: 20px;
     overflow: hidden;
 }
@@ -146,8 +149,8 @@ footer {
     }
 
     .intro {
-        flex-direction: column; 
-    }   
+        flex-direction: column;
+    }
 
     .content {
         margin: 20px;
@@ -164,30 +167,44 @@ footer {
     }
 
     .content h1 {
-        font-size: 30px; 
+        font-size: 30px;
     }
 
     .content p {
-        font-size: 20px; 
+        font-size: 20px;
     }
-
-    
-
-    .image{
+    .image {
         width: 100%;
     }
-    .content, .intro div:nth-child(2) {
+
+    .content,
+    .intro div:nth-child(2) {
         flex: 1;
         max-width: 100%;
         margin-bottom: 30px;
-    
+
+    }
+    .maped {
+       display: flex;
+       align-items: center;
+       justify-content: center;
+    }
+
+    #mapsvg {
+        width: 100%;
+        height: auto;
     }
 }
 
 
 @keyframes fadeOut {
-    from { opacity: 1; }
-    to { opacity: 0; }
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
 }
 
 .fade-out {
@@ -197,8 +214,13 @@ footer {
 }
 
 @keyframes fadeIn {
-    from { opacity: 0; }
-    to { opacity: 1; }
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
 
 .fade-in {
@@ -210,8 +232,8 @@ footer {
 
 #mapsvg {
     transition: transform 0.3s ease;
-    transform-origin:  top left;
-
+    transform-origin: top left;
+    height: 80vh;
 }
 
 .maped {
@@ -219,3 +241,28 @@ footer {
     width: 100%;
     height: 87vh
 }
+
+#infoModal {
+    display: none;
+    position: absolute;
+    z-index: 10;
+    border: 1px solid #fff;
+    background-color: #60e1cb;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease-in-out;
+    color: #fff;
+    text-align: left;
+    align-items: center;
+}
+
+#infoModal h2, #infoModal p {
+    color: #ffffff;
+    margin-top: 0;
+}
+
+path:hover{
+    fill: #117c6a;
+}
+
